# ethereumapis

./: WORKSPACE  go.mod  go.sum
eth/v1/: BUILD.bazel  beacon_blocks.proto  beacon_chain_service.pb.go  beacon_chain_service.proto  beacon_chain_service_grpc.pb.go  beacon_debug_service.proto  beacon_pools.proto  beacon_state.proto  config.proto  debug.proto  generated.ssz.go  node.proto
eth/v1alpha1/: BUILD.bazel  attestation.pb.go  attestation.proto  beacon_block.pb.go  beacon_block.proto  beacon_chain.pb.go  beacon_chain.proto  generated.ssz.go  shard.pb.go  shard.proto  shard_block.pb.go  validator.pb.go  validator.proto
eth/v1alpha1_gateway/: attestation.pb.go  beacon_block.pb.go  shard.pb.go  validator.pb.go
scripts/: update-go-pbs.sh
tools/: ethereumapi_dependencies.bzl
